모바일 css 수정 / 댓글 좋아요, 신고 기능 삭제 / admin 연동 사용자 화면 기능 개발 / 작품 형태 추가 / 메인 페이지 인기 회원 출력 기능 수정 / 전체화면 회원 프로필 이미지 null 일시 딜리아트 로고 추가

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -686,9 +686,13 @@
             var mbrIntro = mbr.mbrIntro ? mbr.mbrIntro : ' ';
     		
 	        strHtml += '<li class="swiper-slide">';
-	        strHtml += '   <a href="javascript:void(0);" onclick="artstDetail('+mbr.mbrSq+')">';
+	        strHtml += '   <a href="/otherPage/main?mbrSq='+mbr.mbrSq+'">';
 	        strHtml += '	    <div class="cns-box3">';
-	        strHtml += '		   <img src="'+mbr.mbrProfileImgUrl+'" alt="" />';
+	        if(mbr.mbrProfileImgUrl != null && mbr.mbrProfileImgUrl != ""){
+	        	strHtml += '		   <img src="'+mbr.mbrProfileImgUrl+'"/>';
+	        }else{
+	        	strHtml += '		   <img src="/resources/img/mypage/ico_dauser.png"/>';
+	        }
 	        strHtml += '   	   <h4 style="text-align:center; padding-top:10px;">'+mbr.mbrNcknm+'</h4>';
 	        strHtml += '        <div class="text" style="text-align:center; padding-top:10px;">'+ mbrIntro +'</div>';
 		   	strHtml += '	    </div>';
@@ -698,9 +702,7 @@
     	
     	$("#popularMbrBox").prepend(strHtml);
 
-  	   
     }
-    
     
     // 전시 소개/후기 셋팅
     function setPopularExhibit(list){
