--- a/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
@@ -114,12 +114,12 @@
             </div>
             <button class="btn_recording" onclick="btnRecording()">기록하기</button>
             <div class="community_visual_wrap" id="community_banner">
-                <div class="community_visual"><a href="https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet"><img src="/resources/img/img_new/community_visual.jpg" alt=""></a></div>
+                <!-- <div class="community_visual"><a href="https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet"><img src="/resources/img/img_new/community_visual.jpg" alt=""></a></div>
                 <div class="community_visual_event">
                     <ul>
                         <li><a href="https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet"><img src="/resources/img/img_new/event_6m_mo.png" alt=""></a></li>
                     </ul>  
-                </div>
+                </div> -->
             </div>
             <div class="works_wrap">
                 <div class="tit_wrap">
@@ -335,23 +335,23 @@
 		//오른쪽 배너
 		html += '<div class="community_visual">';
 		html += '	<a href="'+community_banner.bigBnn.bnnMLndUrl+'">';
-		html += '		<img src="'+community_banner.bigBnn.bnnMmImgUrl+'" alt="">';
+		html += '		<img src="'+community_banner.bigBnn.bnnMmImgUrl+'">';
 		html += '	</a>';
 		html += '</div>';
 		//왼쪽배너
 		html += '<div class="community_visual_event">';
-        html += '	<ul>';
-        html += '		<li>';
+        //html += '	<ul>';
+        //html += '		<li>';
         html += '			<a href="'+community_banner.bigBnn.bnnELndUrl+'">';
-        html += '				<img src="'+community_banner.bigBnn.bnnEmImgUrl+'" alt="">';
+        html += '				<img src="'+community_banner.bigBnn.bnnEmImgUrl+'">';
         html += '			</a>';
-        html += '		</li>';
-        html += '       <li>';
-        html += '			<a href="'+community_banner.bigBnn.bnnELndUrl+'">';
-        html += '				<img src="/resources/img/img_new/btn_event_more.png" alt="">';
-        html += '			</a>';
-        html += '		</li>';
-        html += '	</ul>';  
+        //html += '		</li>';
+        //html += '       <li>';
+        //html += '			<a href="'+community_banner.bigBnn.bnnELndUrl+'">';
+        //html += '				<img src="/resources/img/img_new/btn_event_more.png" alt="">';
+        //html += '			</a>';
+        //html += '		</li>';
+        //html += '	</ul>';  
         html +=	'</div>';
 		
 		return html;
