--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -150,8 +150,10 @@
 										<label for="b1"><span></span>평면</label><br/>
 										<input type="checkbox" id="b2" name="workShpCd" value="SLD" class="searchOption" onclick="dealSearch()"/>
 										<label for="b2"><span></span>입체</label><br/>
-										<input type="checkbox" id="b3" name="workShpCd" value="ANT" class="searchOption" onclick="dealSearch()"/>
+										<input type="checkbox" id="b3" name="workShpCd" value="ACT" class="searchOption" onclick="dealSearch()"/>
 										<label for="b3"><span></span>고미술</label>
+										<input type="checkbox" id="b4" name="workShpCd" value="CRF" class="searchOption" onclick="dealSearch()"/>
+										<label for="b4"><span></span>공예</label>
 										<!-- <input type="checkbox" id="b3" name="workShpCd" value="NFT" class="searchOption" onclick="dealSearch()"/>
 										<label for="b3"><span></span>NFT</label> -->
 									</div>
@@ -173,8 +175,8 @@
 										<label for="c22"><span></span>에디션</label><br/>
                                         <input type="checkbox" id="c33" name="workClsfcCd" value="PICTURE" class="searchOption" onclick="dealSearch()"/>
 										<label for="c33"><span></span>사진</label><br/>
-										<input type="checkbox" id="c44" name="workClsfcCd" value="CRFTS" class="searchOption" onclick="dealSearch()"/>
-										<label for="c44"><span></span>공예품</label>
+										<!-- <input type="checkbox" id="c44" name="workClsfcCd" value="CRFTS" class="searchOption" onclick="dealSearch()"/>
+										<label for="c44"><span></span>공예품</label> -->
 										<!-- <input type="checkbox" id="c1" name="workClsfcCd" value="ORNTPAI" class="searchOption" onclick="dealSearch()"/>
 										<label for="c1"><span></span>동양화</label><br/>
                                         <input type="checkbox" id="c2" name="workClsfcCd" value="WSTNPAI" class="searchOption" onclick="dealSearch()"/>
@@ -369,6 +371,10 @@
 													<label for="o1"><span></span>평면</label><br/>
                                                     <input type="checkbox" id="o2" name="workShpCd" value="SLD" class="searchOption"/>
 													<label for="o2"><span></span>입체</label><br/>
+													<input type="checkbox" id="o3" name="workShpCd" value="ACT" class="searchOption"/>
+													<label for="o3"><span></span>고미술</label><br/>
+													<input type="checkbox" id="o4" name="workShpCd" value="CRF" class="searchOption"/>
+													<label for="o4"><span></span>공예</label><br/>
                                                    <!--  <input type="checkbox" id="o3" name="workShpCd" value="NFT" class="searchOption"/>
 													<label for="o3"><span></span>NFT</label> -->
 												</div>
@@ -383,7 +389,7 @@
 													<input type="checkbox" id="i22" name="workClsfcCd" value="EDITION" class="searchOption"/>
 													<label for="i22"><span></span>에디션</label>
 													<input type="checkbox" id="i33" name="workClsfcCd" value="PICTURE" class="searchOption"/>
-													<label for="i33"><span></span>사진..</label>
+													<label for="i33"><span></span>사진</label>
                                                     <!-- <input type="checkbox" id="i1" name="workClsfcCd" value="ORNTPAI" class="searchOption"/>
 													<label for="i1"><span></span>동양화</label><br/>
                                                     <input type="checkbox" id="i2" name="workClsfcCd" value="WSTNPAI" class="searchOption"/>
@@ -584,6 +590,14 @@
 							<div class="db-div">
                                 <input type="checkbox" id="x2" name="workShpCd" value="SLD" class="searchOption"/>
 								<label for="x2"><span></span>입체</label>
+							</div>
+							<div class="db-div">
+                                <input type="checkbox" id="x3" name="workShpCd" value="ACT" class="searchOption"/>
+								<label for="x3"><span></span>고미술</label>
+							</div>
+							<div class="db-div">
+                                <input type="checkbox" id="x4" name="workShpCd" value="CRF" class="searchOption"/>
+								<label for="x4"><span></span>공예</label>
 							</div>
 							<!-- <div class="db-div">
                                 <input type="checkbox" id="x3" name="workShpCd" value="NFT" class="searchOption"/>
