--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
@@ -269,22 +269,24 @@
 											<label for="z1" class="wd-145"><span></span>평면</label>
 											<input type="radio" id="z2" name="COLLworkShpCd" value="SLD"/>
 											<label for="z2" class="wd-145"><span></span>입체</label>
-											<input type="radio" id="z11" name="COLLworkShpCd" value="ANT"/>
-											<label for="z11" class="wd-145"><span></span>고미술</label>
+											<input type="radio" id="z3" name="COLLworkShpCd" value="ACT"/>
+											<label for="z3" class="wd-145"><span></span>고미술</label>
+											<input type="radio" id="z4" name="COLLworkShpCd" value="CRF"/>
+											<label for="z4" class="wd-145"><span></span>공예</label>
 											
 										</td>
 									</tr>
 									<tr>
 										<th><span class="my-red">구분</span></th>
 										<td>
-											<input type="checkbox" id="z3" name="COLLworkClsfcCd" value="PAINTING" onclick="workClsfcCdCheck()"/>
-											<label for="z3" class="wd-145"><span></span>회화</label>
-											<input type="checkbox" id="z4" name="COLLworkClsfcCd" value="EDITION" onclick="workClsfcCdCheck()"/>
-											<label for="z4" class="wd-145"><span></span>에디션</label>
-											<input type="checkbox" id="z5" name="COLLworkClsfcCd" value="PICTURE" onclick="workClsfcCdCheck()"/>
-											<label for="z5" class="wd-145"><span></span>사진</label>
-											<input type="checkbox" id="z12" name="COLLworkClsfcCd" value="CRFTS" onclick="checkCrfts()"/>
-											<label for="z12" class="wd-145"><span></span>공예품</label>
+											<input type="checkbox" id="z5" name="COLLworkClsfcCd" value="PAINTING" onclick="workClsfcCdCheck()"/>
+											<label for="z5" class="wd-145"><span></span>회화</label>
+											<input type="checkbox" id="z6" name="COLLworkClsfcCd" value="EDITION" onclick="workClsfcCdCheck()"/>
+											<label for="z6" class="wd-145"><span></span>에디션</label>
+											<input type="checkbox" id="z7" name="COLLworkClsfcCd" value="PICTURE" onclick="workClsfcCdCheck()"/>
+											<label for="z7" class="wd-145"><span></span>사진</label>
+											<!-- <input type="checkbox" id="z12" name="COLLworkClsfcCd" value="CRFTS" onclick="checkCrfts()"/>
+											<label for="z12" class="wd-145"><span></span>공예품</label> -->
 										</td>
 									</tr>
 									<tr>
@@ -610,25 +612,27 @@
 									<tr>
 										<th><span class="my-red">형태</span></th>
 										<td>
-											<input type="radio" id="z6" name="WORKworkShpCd" value="PLN"/>
-											<label for=z6 class="wd-145"><span></span>평면</label>
-											<input type="radio" id="z7" name="WORKworkShpCd" value="SLD"/>
-											<label for="z7" class="wd-145"><span></span>입체</label>
-											<input type="radio" id="z13" name="WORKworkShpCd" value="ANT"/>
-											<label for="z7" class="wd-145"><span></span>고미술</label>
+											<input type="radio" id="z8" name="WORKworkShpCd" value="PLN"/>
+											<label for="z8" class="wd-145"><span></span>평면</label>
+											<input type="radio" id="z9" name="WORKworkShpCd" value="SLD"/>
+											<label for="z9" class="wd-145"><span></span>입체</label>
+											<input type="radio" id="z10" name="COLLworkShpCd" value="ACT"/>
+											<label for="z10" class="wd-145"><span></span>고미술</label>
+											<input type="radio" id="z11" name="COLLworkShpCd" value="CRF"/>
+											<label for="z11" class="wd-145"><span></span>공예</label>
 										</td>
 									</tr>
 									<tr>
 										<th><span class="my-red">구분</span></th>
 										<td>
-											<input type="checkbox" id="z8" name="WORKworkClsfcCd" value="PAINTING" onclick="workClsfcCdCheck()"/>
-											<label for="z8" class="wd-145"><span></span>회화</label>
-											<input type="checkbox" id="z9" name="WORKworkClsfcCd" value="EDITION" onclick="workClsfcCdCheck()"/>
-											<label for="z9" class="wd-145"><span></span>에디션</label>
-											<input type="checkbox" id="z10" name="WORKworkClsfcCd" value="PICTURE" onclick="workClsfcCdCheck()"/>
-											<label for="z10" class="wd-145"><span></span>사진</label>
-											<input type="checkbox" id="z14" name="WORKworkClsfcCd" value="CRFTS" onclick="checkCrfts()"/>
-											<label for="z14" class="wd-145"><span></span>공예품</label>
+											<input type="checkbox" id="z12" name="WORKworkClsfcCd" value="PAINTING" onclick="workClsfcCdCheck()"/>
+											<label for="z12" class="wd-145"><span></span>회화</label>
+											<input type="checkbox" id="z13" name="WORKworkClsfcCd" value="EDITION" onclick="workClsfcCdCheck()"/>
+											<label for="z13" class="wd-145"><span></span>에디션</label>
+											<input type="checkbox" id="z14" name="WORKworkClsfcCd" value="PICTURE" onclick="workClsfcCdCheck()"/>
+											<label for="z14" class="wd-145"><span></span>사진</label>
+											<!-- <input type="checkbox" id="z14" name="WORKworkClsfcCd" value="CRFTS" onclick="checkCrfts()"/>
+											<label for="z14" class="wd-145"><span></span>공예품</label> -->
 										</td>
 									</tr>
 									<tr>
