--- a/src/main/resources/templates/thymeleaf/fo/myPage/otherpage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/otherpage_main.html
@@ -106,82 +106,52 @@
                 <div class="contents_right">
                   <div class="mypage_works_wrap">
                     <div class="tit_wrap">
-                        <h2>나의 작품 <span id="myWorksTotal">99</span></h2>
+                        <h2>나의 작품 <span id="myWorksTotal"></span></h2>
                         <a href="javascript:moreEvent('work');" class="btn_more">더보기</a>
                     </div>
                     <ul id="myWorks">
-                        <li>
-                          <a href="#"><img src="/resources/img/img_new/sample_works01.jpg" alt=""></a>
-                        </li>
-                        <li>
-                          <a href="#"><img src="/resources/img/img_new/sample_works02.jpg" alt=""></a>
-                        </li>
-                        <li class="pic_more">
-                          <a href="#"><span>+ 99</span><img src="/resources/img/img_new/sample_works03.jpg" alt=""></a>
-                        </li>     
-                      </ul>
+                       
+                    </ul>
                   </div>
                   <div class="mypage_showingoff_wrap">
                     <div class="tit_wrap">
-                        <h2>자랑하기 <span id="myBoastTotal">99</span></h2>
+                        <h2>자랑하기 <span id="myBoastTotal"></span></h2>
                         <a href="javascript:moreEvent('showOff');" class="btn_more">더보기</a>
                     </div>
                     <ul id="myBoast">
-                        <li>
-                          <a href="#"><img src="/resources/img/img_new/sample_works05.jpg" alt=""></a>
-                        </li>
-                        <li>
-                          <a href="#"><img src="/resources/img/img_new/sample_works06.jpg" alt=""></a>
-                        </li>
-                        <li class="pic_more">
-                          <a href="#"><span>+ 99</span><img src="/resources/img/img_new/sample_works07.jpg" alt=""></a>
-                        </li>                        
-                      </ul>
+                                    
+                    </ul>
                   </div>
                   <div class="mypage_posts_warp">
                     <div class="intro_posts">
                         <div class="tit_wrap">
-                            <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시후기 / 소개</span><em id="myExhbnTotal">+99</em></h2>
+                            <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시후기 / 소개</span><em id="myExhbnTotal"></em></h2>
                             <a href="javascript:moreEvent('exhint');" class="btn_more">더보기</a>
                         </div>
                         <ol id="myExhbn">
-                            <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
-                            <li><a href="#">희망을 주는 그림</a><em></em></li>
-                            <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
-                            <li><a href="#">희망을 주는 그림</a><em></em></li>
+                          
                         </ol>
                     </div>                    
                   </div>
                   <div id = "myIssue_warp" class="mypage_posts_warp mt10">
                     <div class="issue_posts">
                         <div class="tit_wrap">
-                            <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em id="myIssueTotal">+99</em></h2>
+                            <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em id="myIssueTotal"></em></h2>
                             <a href="javascript:moreEvent('issue');" class="btn_more">더보기</a>
                         </div>
                         <ol id="myIssue">
-                            <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
-                            <li><a href="#">도자기 보관 방법</a><em></em></li>
-                            <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
-                            <li><a href="#">도자기 보관 방법</a><em></em></li>
+                            
                         </ol>
                     </div>                    
                   </div>
                   <div id="myFollowing_wrap" class="mypage_following_wrap">
                     <div class="tit_wrap">
-                        <h2>팔로잉 <span id="myFollowingTotal">0</span></h2>
+                        <h2>팔로잉 <span id="myFollowingTotal"></span></h2>
                         <a href="javascript:moreEvent('following');" class="btn_more">더보기</a>
                     </div>
                     <ul id="myFollowing">
-                        <li>
-                          <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
-                        </li>
-                        <li>
-                          <a href="#"><img src="/resources/img/img_new/sample_master02.jpg" alt=""></a>
-                        </li>
-                        <li class="pic_more">
-                          <a href="#"><span>+ 0</span><img src="/resources/img/img_new/sample_master03.jpg" alt=""></a>
-                        </li>                        
-                      </ul>
+                                      
+                    </ul>
                   </div>
             	</div>
             </div>
