--- a/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_sold_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_sold_mo.html
@@ -290,7 +290,7 @@
 							<div class="swiper-wrapper" id="swiper_workList" aria-live="polite">
                                 <div class="swiper-slide hd-div swiper-slide-active" style="width: 464px;">
                                     <a href="/deal/workDetail?SqNumber=202">
-                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/artstWork/34/M341.jpg" class="hd-img" style="width:100&amp;;">
+                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/artstWork/34/M341.jpg" class="hd-img" style="width:100%;">
                                         <div class="hd-text">
                                             <h4 style="height:100px;">김희수(1984)</h4>
                                             <div class="hd-d1">무제 (김희수작가)(2020)			<br>소재 Acrylic on cavas, 37.9 x 45.5cm</div>
@@ -299,7 +299,7 @@
                                 </div>
                                 <div class="swiper-slide hd-div swiper-slide-next" style="width: 464px;">
                                     <a href="/deal/workDetail?SqNumber=497">
-                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/d65f22cd-09e9-493b-9ef5-e0fc098d21181663572906911.jpg" class="hd-img" style="width:100&amp;;">
+                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/d65f22cd-09e9-493b-9ef5-e0fc098d21181663572906911.jpg" class="hd-img" style="width:100%;">
                                         <div class="hd-text">
                                             <h4 style="height:100px;">김희수(1984)</h4>
                                             <div class="hd-d1">무제(2020)			<br>소재 Acrylic on canvas, 72 x 53cm</div>
@@ -308,7 +308,7 @@
                                 </div>
                                 <div class="swiper-slide hd-div" style="width: 464px;">
                                     <a href="/deal/workDetail?SqNumber=498">
-                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/7139fd02-e21e-4b46-9a39-a47428b96cac1663572906823.jpg" class="hd-img" style="width:100&amp;;">
+                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/7139fd02-e21e-4b46-9a39-a47428b96cac1663572906823.jpg" class="hd-img" style="width:100%;">
                                         <div class="hd-text">
                                             <h4 style="height:100px;">김희수(1984)</h4>
                                             <div class="hd-d1">무제(2017)			<br>소재 Acrylic on canvas, 45 x 37cm</div>
@@ -317,7 +317,7 @@
                                 </div>
                                 <div class="swiper-slide hd-div" style="width: 464px;">
                                     <a href="/deal/workDetail?SqNumber=499">
-                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/5b8b486a-05f1-4428-8061-da0061c738981663572906774.jpg" class="hd-img" style="width:100&amp;;">
+                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/5b8b486a-05f1-4428-8061-da0061c738981663572906774.jpg" class="hd-img" style="width:100%;">
                                         <div class="hd-text">
                                             <h4 style="height:100px;">김희수(1984)</h4>
                                             <div class="hd-d1">무제(2020)			<br>소재 Acrylic on canvas, 33 x 45cm</div>
@@ -326,7 +326,7 @@
                                 </div>
                                 <div class="swiper-slide hd-div" style="width: 464px;">
                                     <a href="/deal/workDetail?SqNumber=500">
-                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/e1628651-0a44-4c41-b38d-fcc348ba129f1663572906867.jpg" class="hd-img" style="width:100&amp;;">
+                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/145/e1628651-0a44-4c41-b38d-fcc348ba129f1663572906867.jpg" class="hd-img" style="width:100%;">
                                         <div class="hd-text">
                                             <h4 style="height:100px;">김희수(1984)</h4>
                                             <div class="hd-d1">무제(2017)			<br>소재 Acrylic on canvas, 53 x 45cm</div>
@@ -335,7 +335,7 @@
                                 </div>
                                 <div class="swiper-slide hd-div" style="width: 464px;">
                                     <a href="/deal/workDetail?SqNumber=502">
-                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/812/92f61448-5e25-48c4-ac7c-7343c519157a%EB%8C%80%ED%91%9C%EC%82%AC%EC%A7%84.jpg" class="hd-img" style="width:100&amp;;">
+                                        <img src="https://dealingart-resorce.s3.ap-northeast-2.amazonaws.com/dealingart/collection/812/92f61448-5e25-48c4-ac7c-7343c519157a%EB%8C%80%ED%91%9C%EC%82%AC%EC%A7%84.jpg" class="hd-img" style="width:100%;">
                                         <div class="hd-text">
                                             <h4 style="height:100px;">김희수(1984)</h4>
                                             <div class="hd-d1">Untitled(2021)			<br>소재 Acrylic on canvas, 41 x 27cm</div>
