--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -1521,7 +1521,7 @@ columns2 figure {
     width: 100%;
     max-width: 355px;
     height: 50px;
-    margin: 60px auto 40px auto;
+    margin: 20px auto 10px auto;
     border-radius: 50px;
     border: #dadada 1px solid;
 }
@@ -4738,12 +4738,12 @@ code{
 .mgz-ul li.active a:after{content:'';position: absolute;bottom: 0;left: 0;background-color: #e9625c;width: 100%;height: 4px;}
 
 .mgz-list{
-    margin: 10rem auto 5rem auto;
+    margin: 0rem auto 5rem auto;
     width: 100%;
     max-width: 131.7rem;
 }
 .mgz-list li{
-    width: 30rem;
+    width: 49%;
     float: left;
     margin-right: 1.4rem;
 }
@@ -4829,7 +4829,7 @@ code{
     min-height: 0;
     border-bottom: 0;
     position: absolute;
-    top: 15.5rem;
+    top: 3.7rem;
     right: 3.7rem;
     width: 3.7rem;
     height: 3.7rem;
@@ -6673,12 +6673,11 @@ p.dib{display:inline-block !important;}
 .community_visual_wrap {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   width: 100%;
   height: auto;
 }
-.community_visual{float: none;width: 70%;height: auto;}
-.community_visual_event{float: none;width: 30%;height: auto;}
+.community_visual{float: none;width: 65%;height: auto;}
+.community_visual_event{float: none;width: 35%;height: auto;}
 .works_wrap{margin-top:30px;position: relative;}
 .works_wrap:after {content: "";display: block;clear: both;}
 .works_wrap .tit_wrap{position: relative;}
@@ -7320,7 +7319,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_showingoff_detail_page_wrap .picture_detail{display: flex;justify-content: center;flex-direction: column;align-items: center;border-bottom: 1px solid #e8e8e8;padding: 50px 0;}
 .works_showingoff_detail_page_wrap .picture_detail .method{padding: 50px 0;font-size: 20px;font-weight: 500;}
 .works_showingoff_detail_page_wrap .picture_detail .small_tit{padding: 50px 0;font-size: 28px;font-weight: 700;}
-.works_showingoff_detail_page_wrap .picture_detail p{padding: 10px 0;font-size: 2rem;font-weight: 300;}
+.works_showingoff_detail_page_wrap .picture_detail p{font-weight: 400; font-size: 2.4rem;}
 
 .works_info_wrap{margin-top: 30px;}
 .works_info_wrap:after{content: "";display: block;clear: both;}
@@ -7509,16 +7508,16 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .magazine9_wrap #nav ul li .over{color: #af1c2a !important;}
 .magazine9_visual_wrap{margin-top: 20px;}
 .search_artist_wrap{max-width: 1100px;margin: 0 auto;}
-.search_artist_wrap .artist_name{border-bottom: 1px solid #e8e8e8;padding: 20px 0;}
+.search_artist_wrap .artist_name{border-bottom: 1px solid #e8e8e8;padding: 10px 0;}
 .search_artist_wrap .artist_name .tit{width: 100px;font-size: 2rem;font-weight: 500;color: #000000;margin-bottom: 10px;}
 .search_artist_wrap .artist_name .language{display: flex;flex-direction: column;}
 .search_artist_wrap .artist_name .kor a{font-size: 2rem;border: 1px solid #d9d9d9;border-radius: 5px;padding: 5px;margin-right: 5px;display: inline-block;margin-bottom: 3px;}
 .search_artist_wrap .artist_name .eng{margin-top: 10px;}
 .search_artist_wrap .artist_name .eng a{font-size: 2rem;border: 1px solid #d9d9d9;border-radius: 5px;padding: 5px 6px;margin-right: 5px;display: inline-block;margin-bottom: 3px;}
-.search_artist_wrap .field_activity{border-bottom: 1px solid #e8e8e8;padding: 20px 0;}
+.search_artist_wrap .field_activity{border-bottom: 1px solid #e8e8e8;padding: 10px 0;}
 .search_artist_wrap .field_activity .tit{width: 100px;font-size: 2rem;font-weight: 500;color: #000000;margin-bottom: 10px;}
 .search_artist_wrap .field_activity label{margin-right: 30px;font-size: 2rem;}
-.search_artist_wrap .year_birth{border-bottom: 1px solid #e8e8e8;padding: 20px 0;}
+.search_artist_wrap .year_birth{border-bottom: 1px solid #e8e8e8;padding: 10px 0;}
 .search_artist_wrap .year_birth .tit{width: 100px;font-size: 2rem;font-weight: 500;color: #000000;margin-bottom: 10px;}
 .search_artist_wrap .year_birth .input_cal{display: flex;width: auto;}
 .search_artist_wrap .year_birth .input_cal span{margin: 12px 10px 0;}
@@ -7534,7 +7533,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .profile_img .photo_wrap button{padding: 5px 12px 5px 32px;border-radius: 5px;color: #ffffff;background: #717171 url("../img/img_new/ico_profile_del.png") 13px 50% no-repeat;margin-left: 10px;}
 .profile_checkbox_wrap label{margin-right: 10px;font-size: 2rem !important;}
 
-.magazine9_wrap .popular_insight_wrap{max-width: 1500px;margin: 50px auto 0;position: relative;}
+.magazine9_wrap .popular_insight_wrap{max-width: 1500px;margin: 20px auto 0;position: relative;}
 .magazine9_wrap .popular_insight_wrap:after{content: "";display: block;clear: both;}
 .magazine9_wrap .popular_insight_wrap .tit_wrap{position: relative;}
 .magazine9_wrap .popular_insight_wrap .tit_wrap h2{font-size: 2.625rem;letter-spacing: -1.5px;}
