--- a/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
@@ -86,7 +86,7 @@
 			
 			<div class="contents max-1500">
 				<div class="cont-title3">
-					<h3>이용약관 및 개인정보 보호 작품명</h3>
+					<h3>이용약관</h3>
 				</div>
 				
 				<div class="terms-wrap">
@@ -410,12 +410,12 @@
 							
 							1. 본 약관은 대한민국법을 준거법으로 하며 본 약관 또는 서비스에 관하여 발생하는 회사에 관한 모든 분쟁에 관한 소송은 서울중앙지방법원에 전속적 관할이 있습니다. <br/>
 							2. 회사는 서비스를 이용하는 회원 간 분쟁이 발생하는 경우에 이를 합리적이고 원활히 조정하기 위하여 고객센터 및 1:1 문의 채널, 신고하기 기능을 운영하고 있습니다. <br/>
-							3. 본 서비스를 위반하거나 서비스 이용 시 불편사항이 발생한 경우 help@dealing-art.com을 이용하시거나 전화(1533-3024) 또는 Fax(02-336-2920)로 알려주시면 성심성의껏 처리해 드리겠습니다.<br/><br/><br/><br/>
+							3. 본 서비스를 위반하거나 서비스 이용 시 불편사항이 발생한 경우 help@dealing-art.com을 이용하시거나 전화(070-4267-7372)로 알려주시면 성심성의껏 처리해 드리겠습니다.<br/><br/><br/><br/>
 							
 							
 							
 							맨션나인 주식회사<br/>
-							소재지: 서울특별시 마포구 성산동 256 3층 <br/>
+							소재지: 서울특별시 강남구 역삼동 723-29 1층<br/>
 							대표이사: 이영선<br/><br/>
 							 
 							● 공고일자: 2022년 5월 31일
