--- a/src/main/resources/templates/thymeleaf/fo/community/community_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_issue.html
@@ -247,7 +247,7 @@
 	        strHtml += '                    <div class="user">';
 	        strHtml += '                        <ul>';
 	        
-	        if(null != issue.mbrProfileImgUrl){
+	        if(issue.mbrProfileImgUrl != null && issue.mbrProfileImgUrl != ""){
 		        strHtml += '                            <li class="pt5"><img src="'+ issue.mbrProfileImgUrl +'" alt=""></li>';
 	        } else {
 	        	strHtml += '                            <li class="pt5"><img src="/resources/img/img_new/ico_dauser.png" alt=""></li>';
