--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -98,7 +98,6 @@
 
 <body>
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
-	
     <div id="container">
         <div class="mypage_wrap_community">
             <div class="works_showingoff_detail_page_wrap mb0">
@@ -151,6 +150,8 @@
 		setReportCompleteModal();
 		setReportErrorModal();
 		
+		// 컴포넌트 권한 및 사용 유무
+		fn_chkComponetUseYn(boardAuth);
     });
     
     // 커뮤니티 정보 셋팅
@@ -164,7 +165,7 @@
 	    strHtml += '<div class="user_wrap">';
 	    strHtml += '    <div class="user">';
 	    strHtml += '        <ul>';
-	    strHtml += '            <li class="pt5"><img src="'+ (comt.mbrProfileImgUrl || "/resources/img/mypage/ico_dauser.png") +'" alt=""></li>';
+	    strHtml += '            <li class="pt5"><img src="'+ (comt.mbrProfileImgUrl || "/resources/img/img_new/ico_dauser.png") +'" alt=""></li>';
 	    strHtml += '            <li class="user_name pr10"><a href="/otherPage/main?mbrSq='+ comt.mbrSq +'"><span>'+ comt.mbrNcknm +'</span></a></li>';
 	    
 	    // 작성자가 아티스트인지 컬렉터인지 
@@ -212,8 +213,11 @@
 	    
 	    $("#comtFirstBox").append(strHtml);
 	    $("#commentCount").text(comt.comtViews);
-		// 컴포넌트 권한 및 사용 유무
-		fn_chkComponetUseYn(boardAuth);
+	    
+	    if (isMobile == true) {
+			$("#picture_detail").css("font-size", "2.0em");
+			$(".text-huge").css("font-size", "1.2em");
+	    }
     }
     
   	//스크랩 체크
@@ -393,16 +397,18 @@
 			// 댓글 사용 여부
 			if(data[0].cmtYn == "Y"){
 				$(".cmt").css("display","block");
+				$("#comments_tit").attr("disabled",false);
 				$(".cmt_reg_btn ba-btn1").attr("disabled",false);
 			}else if(data[0].cmtYn == "N"){
 				$(".cmt").css("display","none");
+				$("#comments_tit").attr("disabled",true);
 				$(".cmt_reg_btn ba-btn1").css("disabled",true);
 			}
 			
 			// 등록 시간 표시 여부
-			if(data[0].cmMgRegDtYn == "Y"){
+			if(data[0].regDtYn == "Y"){
 				$(".day").css("display","block");
-			}else if(data[0].cmtYn == "N"){
+			}else if(data[0].regDtYn == "N"){
 				$(".day").css("display","none");
 			}
 			
