--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
@@ -150,9 +150,12 @@
     	setReportModal();
 		setReportCompleteModal();
 		setReportErrorModal();
-		console.log(boardAuth);
+		
+	 	// 컴포넌트 권한 및 사용 유무
 		fn_chkComponetUseYn(boardAuth);
     });
+    
+
     
     // 커뮤니티 정보 셋팅
     function setComtDetailInfo(){
@@ -209,6 +212,7 @@
 	    
 	    $("#comtFirstBox").append(strHtml);
 	    $("#commentCount").text(comt.comtViews);
+	    
     }
     
   	//스크랩 체크
@@ -363,7 +367,6 @@
 	function fn_chkComponetUseYn(data){
 		
 		if(data != null && data.length > 0){
-
 			// 좋아요 사용 여부
 			if(data[0].likeYn == "Y"){
 				$(".like").css("display","block");
@@ -388,14 +391,17 @@
 			// 댓글 사용 여부
 			if(data[0].cmtYn == "Y"){
 				$(".cmt").css("display","block");
+				$("#comments_tit").attr("disabled",false);
+				$(".cmt_reg_btn ba-btn1").attr("disabled",false);
 			}else if(data[0].cmtYn == "N"){
 				$(".cmt").css("display","none");
+				$("#comments_tit").attr("disabled",true);
+				$(".cmt_reg_btn ba-btn1").css("disabled",true);
 			}
-			
 			// 등록 시간 표시 여부
-			if(data[0].cmMgRegDtYn == "Y"){
+			if(data[0].regDtYn == "Y"){
 				$(".day").css("display","block");
-			}else if(data[0].cmtYn == "N"){
+			}else if(data[0].regDtYn == "N"){
 				$(".day").css("display","none");
 			}
 		}
